--- a/src/components/game/stakes/StakePanel/StakePanel.css
+++ b/src/components/game/stakes/StakePanel/StakePanel.css
@@ -20,7 +20,7 @@
 }
 
 .wideStakeHost__number {
-	flex: 0 0 80px;
+	flex: 0 0 120px;
 	font-size: 24px;
 	text-align: center;
 	overflow: hidden;
